css login e cadastro

--- a/views/alugar.ejs
+++ b/views/alugar.ejs
@@ -1,6 +1,6 @@
 <!-- lista de armarios disponiveis ou gavetas ou carregadores -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +8,64 @@
     <link rel="stylesheet" href="styleAlugar.css">
 </head>
 <body>
-    <% carregadores.forEach ((carregador) => {%>
+    <h1>Selecione um armário:</h1>
+    <br>
     <button>
-        <h3><%= carregador.marca %></h3>
-        <span><%= carregador.status %></span>
-        <span><%= carregador.nomeArmario %></span>
+        <h3>Armario01</h3>
+        <span>Disponivel</span>
         <span>Tipo de carregador: 
-            <span><%= carregador.tipo %></span>
+            <span>Type C</span>
         </span>
     </button>
-    <% })%>
+    <button>
+        <h3>Armario02</h3>
+        <span>Disponivel</span>
+        <span>Tipo de carregador: 
+            <span>Type C</span>
+        </span>
+    </button>
 
+   <button>
+        <h3>Armario03</h3>
+        <span>Disponivel</span>
+        <span>Tipo de carregador: 
+            <span>Type C</span>
+        </span>
+    </button>
+    <button>
+        <h3>Armario04</h3>
+        <span>Disponivel</span>
+        <span>Tipo de carregador: 
+            <span>Type C</span>
+        </span>
+    </button>
+    <button>
+        <h3>Armario05</h3>
+        <span>Disponivel</span>
+        <span>Tipo de carregador: 
+            <span>Type C</span>
+        </span>
+    </button>
+    <button>
+        <h3>Armario06</h3>
+        <span>Disponivel</span>
+        <span>Tipo de carregador: 
+            <span>Type C</span>
+        </span>
+    </button>
+    <button>
+        <h3>Armario07</h3>
+        <span>Disponivel</span>
+        <span>Tipo de carregador: 
+            <span>Type C</span>
+        </span>
+    </button>
+    <button>
+        <h3>Armario08</h3>
+        <span>Disponivel</span>
+        <span>Tipo de carregador: 
+            <span>Type C</span>
+        </span>
+    </button>
 </body>
 </html>
