--- a/arquivos/styleAlugar.css
+++ b/arquivos/styleAlugar.css
@@ -1,7 +1,37 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: rgb(43, 41, 41);
+    align-items: center;
+    text-align: center;
     margin: 0;
     padding: 0;
-    height: 10px;
+}
+
+h1 {
+    margin-left: 2%;
+    margin-bottom: 1%; 
+    margin-top: 2%;
+    text-align: left;
+    color:  rgb(78, 78, 78);
+    font-family: "stone";
+    font-size: 60px;
+}
+
+h3{
+    font-family: "stone";
+    color: green;
+}
+
+@font-face {
+    font-family: "stone";
+    src: url('./fontes/stoNe.ttf') format ('truetype');
+}
+
+button{
+    font-size: 20px;
+    font-family: "stone";
+    background-color: rgb(43, 43, 43);
+    color: rgb(102, 102, 102);
+    margin-right: 2px; /* Espaço à direita de cada botão */
+    margin-bottom: 20px; /* Espaço abaixo de cada botão */
+    
 }
