--- a/arquivos/styleCadastro.css
+++ b/arquivos/styleCadastro.css
@@ -1,37 +1,54 @@
-/* Estilo para o corpo da página */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: rgb(43, 41, 41);
+    align-items: center;
+    text-align: center;
     margin: 0;
     padding: 0;
 }
 
-/* Estilo para títulos */
-h1, h2, h3 {
-    color: #333;
+h1 {
+    margin-left: 2%;
+    margin-bottom: 1%; 
+    margin-top: 2%;
+    color: rgb(20, 20, 20);
+    font-family: "stone";
+    font-size: 110px;
+    -webkit-text-stroke: 1px green;
 }
 
-/* Estilo para links */
-a {
-    text-decoration: none;
-    color: #007bff;
+h2 {
+    margin-left: 2%;
+    margin-top: 0;
+    color:  rgb(78, 78, 78);
+    font-family: "stone";
+    font-size: 35px;
 }
 
-a:hover {
-    text-decoration: underline;
+@font-face {
+    font-family: "stone";
+    src: url('./fontes/stoNe.ttf') format ('truetype');
+}
+input{
+    font-family: "stone";
+    background-color: rgb(43, 43, 43);
+    font-size: 15px;
+    height: 30px;
+    width: 300px;
+}
+.cadastro-form {
+    width: 400px;
+    margin: 0 auto;
+    padding: 30px;
+    background-color: rgb(20, 20, 20);
+    border: 1px solid  rgb(51, 51, 51); 
+    box-shadow: 0 0 16px green; 
 }
 
-/* Estilo para botões */
-button, .btn {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
+button{
+    font-size: 25px;
+    font-family: "stone";
+    margin-right: 4px;
+    margin-left: 4px;
+    background-color: rgb(43, 43, 43);
+    color: rgb(102, 102, 102);
 }
-
-button:hover, .btn:hover {
-    background-color: #0056b3;
-}
-
