--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -2,23 +2,23 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Cadastro</title>
+    <title>Área de cadastro</title>
     
-    <link rel="stylesheet" type="text/css" href="estiloCadastro.css" />
+    <link rel="stylesheet" type="text/css" href="styleCadastro.css"/>
 </head>
 <body>
-    <h1>Cadastro</h1>
+    <h1>ChargerHelp</h1>
+    <h2>Área de cadastro</h2>
+    <div class="cadastro-form">
     <form action="processar_cadastro.php" method="post">
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required><br><br>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
-
-        <label for="cpf">CPF:</label>
-        <input type="text" id="cpf" name="cpf" required pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder="123.456.789-00"><br><br>
-
-        <input type="submit" value="Cadastrar">
-    </form>
+        <input name="nome" id="nome" type="text" maxlength="40" required placeholder="Nome">
+        <br><br>
+        <input name="email" id="email" type="text" maxlength="40" required placeholder="E-mail">
+        <br><br>
+        <input type="text" id="cpf" name="cpf" type="number" required pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required placeholder="CPF = 123.456.789-00"><br><br>
+        <br>
+        <button type="submit">Cadastrar</button>
+    </form></div>
 </body>
 </html>
+
