--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -12,22 +12,41 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="styleIntro.css">
     <title>ChargerHelp</title>
 </head>
 
 <body>
     <header>
-        <a href="#" class="logo"> <i class='bx bx-plus-circle'></i></a>
+        <a href="#" class="logo"> <i class='bx bx-plus-circle'></i>ChargerHelp</a>
 
         <ul class="navegação">
-            <li><a href="#">Cadastro</a></li>
-            <li><a href="#">Login</a></li>
+            <li><a href="cadastro">Cadastro</a></li>
+            <li><a href="login">Login</a></li>
         </ul><!--navegação -->
+
+        <div class="header-icons">
+            <i class='bx bx-message'></i>
+            <div id="menu"><i class='bx bx-menu'></i></div>
+        </div><!--header-icons-->
 
     </header>
 
-    </form>
+    <section class="home"> 
+
+        <div class="home-img">
+            <img src="./produto1.png" class="one"></img>
+        </div><!--home-img-->
+
+        <div class="home-text">
+            <h1>Carregue <br> Grátis</h1>
+            <h5>Porta verde livre para te ajudar</h5>
+            <h3>ChargerHelp ajuda você</h3>
+            <a href="#" class="btn">Saiba mais</a>
+        </div><!--home-text-->
+
+    </section><!--home -->
+    
 </body>
 
 </html>
