--- a/arquivos/styleLogin.css
+++ b/arquivos/styleLogin.css
@@ -1,19 +1,21 @@
 body {
-    background-color: rgb(43, 41, 41);
+    background-color: rgb(108, 138, 108);
     align-items: center;
     text-align: center;
-    margin: 0;
-    padding: 0;
 }
 
 h1 {
     margin-left: 2%;
     margin-bottom: 1%; 
     margin-top: 2%;
-    color: rgb(20, 20, 20);
+    color: rgb(219, 219, 219);
     font-family: "stone";
-    font-size: 110px;
-    -webkit-text-stroke: 1px green;
+    font-size: 135px;
+    -webkit-text-stroke: 1.7px rgb(12, 70, 12);
+}
+p{
+    font-family: "stone";
+    font-size: 20px;
 }
 
 @font-face {
@@ -22,18 +24,23 @@ h1 {
 }
 input{
     font-family: "stone";
-    background-color: rgb(43, 43, 43);
+    background-color: rgb(131, 130, 130);
+    border-color: rgb(219, 219, 219);
     font-size: 15px;
-    height: 30px;
-    width: 300px;
+    height: 28px;
+    width: 280px;
 }
 .login-form {
-    width: 400px;
+    width: 495px;
     margin: 0 auto;
-    padding: 30px;
-    background-color: rgb(20, 20, 20);
-    border: 1px solid  rgb(51, 51, 51); 
-    box-shadow: 0 0 16px green; 
+    padding: 45px;
+    color:  rgb(61, 61, 61);
+    font-size: 22px;
+    font-family: "stone";
+    background-color: rgb(114, 113, 113);
+    border-color: rgb(219, 219, 219); 
+    border-width: 1px;
+    border-style: solid;
 }
 
 button{
@@ -41,6 +48,17 @@ button{
     font-family: "stone";
     margin-right: 4px;
     margin-left: 4px;
-    background-color: rgb(43, 43, 43);
-    color: rgb(102, 102, 102);
+    background-color:rgb(131, 130, 130);
+    border-color: rgb(219, 219, 219);
+    color: rgb(61, 61, 61);
+}
+
+.link_cadastro {
+    color: rgb(12, 70, 12);
+    font-family: "stone";
+}
+
+footer{
+    color: rgb(219, 219, 219);
+    font-size: 23px;
 }
