--- a/views/alugar.ejs
+++ b/views/alugar.ejs
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alugar</title>
+    <title>Área de alugar - ChargerHelp</title>
     <link rel="stylesheet" href="styleAlugar.css">
 </head>
 <body>
-    <h1>Selecione um armário:</h1>
+    <h1>ChargerHelp</h1>
+    <h2>Sessão de armários</h2>
     <br>
     <button>
         <h3>Armario01</h3>
