--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -35,18 +35,46 @@
     <section class="home"> 
 
         <div class="home-img">
-            <img src="./produto1.png" class="one"></img>
+            <img src="./produto1.png" class="one">
         </div><!--home-img-->
 
         <div class="home-text">
             <h1>Carregue <br> Grátis</h1>
             <h5>Porta verde livre para te ajudar</h5>
             <h3>ChargerHelp ajuda você</h3>
-            <a href="#" class="btn">Saiba mais</a>
+            <a href="#" class="btn">Saiba Mais</a>
         </div><!--home-text-->
 
     </section><!--home -->
     
+    <div class="main">
+        <div class="row">
+            <li><img src="./MAIN1.JPG" onclick="slider('produto1.png')"></li>
+        </div><!--row-->
+
+        <div class="row2">
+            <li><img src="./main2.JPG" onclick="slider('produto2.png')"></li>
+        </div><!--row2-->
+
+        <div class="row3">
+            <li><img src="./MAIN3.JPG" onclick="slider('produto3.png')"></li>
+        </div><!--row3-->
+
+    </div><!--main-->
+
+    <script>
+        function slider (anything){
+            document.querySelector ('.one') .src = anything;
+        };
+
+        let menu = document.querySelector('#menu-icon');
+        let navbar = document.querySelector ('.navbar');
+
+        menu.onclick = () => {
+            menu.classList.toggle ('bx-x')
+            navbar.classList.toggle ('open');
+        }
+    </script>
 </body>
 
 </html>
