--- a/arquivos/styleIntro.css
+++ b/arquivos/styleIntro.css
@@ -143,12 +143,85 @@ header{
     font-weight: 500;
     background: transparent;
     border: solid 2px var(--text-color);
-    transition: all.55 ease;
+    transition: all 0.55s ease;
     color: #fff;
 }
 
-.btn :hover{
+.btn:hover{
     background: var(--text-color);
     border: 2px solid var(--text-color);
     color: #000;
+}
+
+.main{
+    position: absolute;
+    top: 50%;
+    left: 3%;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+
+}
+
+.main li img{
+    width: 60px;
+    height: auto;
+    max-width: 100%;
+    border-radius: 50%;
+}
+
+.row{
+
+    background: var(--main-color);
+    height: 80px;
+    width: 75px;
+    border-radius: 50%;
+    display: inline-flex;
+    justify-content: center;
+    transition: all .55 ease;
+    cursor: pointer;
+
+
+}
+
+.row:hover{
+    transform: translateY(-8px);
+
+}
+
+.row2{
+    background: #ff758d;
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    transition: all .55 ease;
+    cursor: pointer;
+
+}
+
+.row2:hover{
+    transform: translateY(-8px);
+}
+
+.row3{
+    background: #ff60ff;
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5 ease;
+    cursor: pointer;
+
+}
+
+.row3:hover{
+    transform: translateY(-8px);
 }
