--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -39,7 +39,8 @@
         </div><!--home-img-->
 
         <div class="home-text">
-            <h1>Carregue <br> Grátis</h1>
+            <h1>Carregue </h1>
+            <h2> Grátis</h2>
             <h5>Porta verde livre para te ajudar</h5>
             <h3>ChargerHelp ajuda você</h3>
             <a href="#" class="btn">Saiba Mais</a>
