--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -1,74 +1,39 @@
-body {
-    background-color: rgb(108, 138, 108);
-    align-items: center;
-    text-align: center;
+<!DOCTYPE html>
+<html lang="pt-br>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styleCadastro.css">
+    <title>Área de Cadastro - ChargerHelp</title>
+</head>
+<body>
+    <header>
+        <h1>ChargerHelp</h1>
+    </header>
+    <br><br>
+    <main>
+        <div class="cadastro-form">
+            <form action="processar_cadastro.php" method="post">
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome" maxlength="40" required>
+                <br><br>
 
-}
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email" maxlength="40" required>
+                <br><br>
 
-h1 {
-    margin-left: 2%;
-    margin-bottom: 1%; 
-    margin-top: 2%;
-    color: rgb(219, 219, 219);
-    font-family: "stone";
-    font-size: 135px;
-    -webkit-text-stroke: 1.7px rgb(12, 70, 12);
-}
+                <label for="cpf">CPF:</label>
+                <input type="text" id="cpf" name="cpf" required pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder="123.456.789-00">
+                <br><br>
 
-p{
-    font-family: "stone";
-    font-size: 20px;
-}
-
-
-@font-face {
-    font-family: "stone";
-    src: url('./fontes/stoNe.ttf') format ('truetype');
-}
-input{
-    font-family: "stone";
-    background-color: rgb(131, 130, 130);
-    border-color: rgb(219, 219, 219);
-    font-size: 15px;
-    height: 28px;
-    width: 280px;
-}
-.cadastro-form {
-    width: 495px;
-    margin: 0 auto;
-    padding: 45px;
-    color:  rgb(61, 61, 61);
-    font-size: 22px;
-    font-family: "stone";
-    background-color: rgb(114, 113, 113);
-    border-color: rgb(219, 219, 219); 
-    border-width: 1px;
-    border-style: solid;
-}
-
-
-input::placeholder {
-    color: rgb(61, 61, 61);
-}
-
-
-button{
-    font-size: 25px;
-    font-family: "stone";
-    margin-right: 4px;
-    margin-left: 4px;
-    background-color:rgb(131, 130, 130);
-    border-color: rgb(219, 219, 219);
-    color: rgb(61, 61, 61);
-}
-
-.link_login{
-    color: rgb(12, 70, 12);
-    font-family: "stone";
-}
-
-
-footer{
-    color: rgb(219, 219, 219);
-    font-size: 23px;
-}
+                <button type="submit">Cadastrar</button>
+            </form>
+        </div>
+        <br>
+        <p>Já possui um cadastro? <a class="link_login" href="https://probable-garbanzo-5gx5q5r5647fp49g-3000.app.github.dev/">Clique aqui para acessar sua conta</a></p>
+    </main>
+    <footer>
+        <p>&copy; 2023 ChargerHelp</p>
+    </footer>
+</body>
+</html>
