--- a/views/alugar.ejs
+++ b/views/alugar.ejs
@@ -11,7 +11,7 @@
 
 <body>
     <h1>ChargerHelp</h1>
-    <h2>Sessão de armários</h2>
+    <h2>Seleção de armários</h2>
     <br>
     <% carregadores.forEach ((carregador)=> {%>
         <button>
