--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -30,7 +30,7 @@
             </form>
         </div>
         <br>
-        <p>Já possui um cadastro? <a class="link_login" href="https://probable-garbanzo-5gx5q5r5647fp49g-3000.app.github.dev/">Clique aqui para acessar sua conta</a></p>
+        <p>Já possui um cadastro? <a class="link_login" href="login">Clique aqui para acessar sua conta</a></p>
     </main>
     <footer>
         <p>&copy; 2023 ChargerHelp</p>
