--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,7 +29,7 @@
             </form>
         </div>
         <br>
-        <p>Não possui um cadastro? <a class="link_cadastro" href="https://probable-garbanzo-5gx5q5r5647fp49g-3000.app.github.dev/cadastro">Clique aqui para se cadastrar</a></p>
+        <p>Não possui um cadastro? <a class="link_cadastro" href="cadastro">Clique aqui para se cadastrar</a></p>
     </main>
     <footer>
         <p>&copy; 2023 ChargerHelp</p>
