--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -3,13 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styleCadastro.css">
+    <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <!-- or -->
+    <link rel="stylesheet"
+    href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styleCadastro.css">
     <title>Área de Cadastro - ChargerHelp</title>
 </head>
 <body>
     <header>
+        <header>
+          
+
+        </header>   
         <h1>ChargerHelp</h1>
-    </header>
+
     <br><br>
     <main>
         <div class="cadastro-form">
