--- a/arquivos/styleCadastro.css
+++ b/arquivos/styleCadastro.css
@@ -5,19 +5,22 @@ body {
 
 }
 
+
+
+
 h1 {
     margin-left: 2%;
     margin-bottom: 1%; 
     margin-top: 2%;
-    color: rgb(219, 219, 219);
+    color: rgb(255, 255, 255);
     text-shadow: 4px 4px rgb(12, 70, 12);
-    font-family: "stone";
-    font-size: 138px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 70px;
 }
 
 p{
-    font-family: "stone";
-    font-size: 21px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
     color: rgb(102, 99, 99);
 }
 
@@ -27,20 +30,20 @@ p{
     src: url('./fontes/stoNe.ttf') format ('truetype');
 }
 input{
-    font-family: "stone";
+    font-family: 'Poppins', sans-serif;
     background-color:   #adb9af;
     border-color: rgb(219, 219, 219);
     font-size: 15px;
     height: 28px;
-    width: 280px;
+    width: 200x;
 }
 .cadastro-form {
-    width: 495px;
+    width: 350px;
     margin: 0 auto;
     padding: 45px;
     color:  rgb(102, 99, 99);
     font-size: 22px;
-    font-family: "stone";
+    font-family: 'Poppins', sans-serif;
     background-color:  #adb9af;
     box-shadow: 0px 4px 12px 0px  rgb(102, 99, 99), 0 6px 20px 0  rgb(102, 99, 99);
     border-color: rgb(102, 99, 99);
@@ -56,7 +59,7 @@ input::placeholder {
 
 button{
     font-size: 25px;
-    font-family: "stone";
+    font-family: 'Poppins', sans-serif;
     margin-right: 4px;
     margin-left: 4px;
     background-color:   #adb9af;
@@ -66,9 +69,8 @@ button{
 
 .link_login{
     color: rgb(12, 70, 12);
-    font-family: "stone";
+    font-family: 'Poppins', sans-serif;
 }
-
 
 footer{
     color: rgb(102, 99, 99);
