--- a/arquivos/styleIntro.css
+++ b/arquivos/styleIntro.css
@@ -151,6 +151,7 @@ header{
     margin-left: 50%;
     border-radius: 50%;
     box-shadow: 4px 4px  rgb(131, 130, 130);
+    
 
 }
 
@@ -190,17 +191,18 @@ header{
 }
 
 .main li img{
-    width: 60px;
+    width: 70px;
     height: auto;
     max-width: 100%;
-    border-radius: 50%;
+    border-radius: 70px; 
+    /*border-radius: 10px;  Valor do arredondamento em pixels ou outra unidade de medida */
+    border: 3px solid var(--main-color); /* Cor da borda em formato hexadecimal (vermelho neste exemplo) */
 }
 
 .row{
 
-    background: var(--main-color);
-    height: 80px;
-    width: 75px;
+    height: 70px;
+    width: 70px;
     border-radius: 50%;
     display: inline-flex;
     justify-content: center;
@@ -216,7 +218,6 @@ header{
 }
 
 .row2{
-    background: #ff758d;
     height: 70px;
     width: 70px;
     border-radius: 50%;
@@ -233,7 +234,6 @@ header{
 }
 
 .row3{
-    background: #ff60ff;
     height: 70px;
     width: 70px;
     border-radius: 50%;
