--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -25,8 +25,7 @@
     <br><br>
     <main>
         <div class="cadastro-form">
-            <form action="processar_cadastro.php" method="post">
-                
+            <form>
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" maxlength="40" required>
                 <br><br>
