--- a/arquivos/styleIntro.css
+++ b/arquivos/styleIntro.css
@@ -10,9 +10,10 @@
 
 /* paleta de cores do site e o tamanho de fontes que sera usado */
 :root{
-    --bg-color: var(--bg-color) #b8e7c2;
+    --bg-color:  #adb9af;
     --text-color: #fff;
-    --main-color: #4e9c61;
+    --second-text-color:  #3b3b3b;;
+    --main-color: rgb(17, 104, 17);;
     --other-color: #7cff9d;
     --h1-font: 4rem;
     --p-font: 1rem;
@@ -20,7 +21,7 @@
 }
 
 body{
-    background-color: #adb9af;
+    background-color: var(--bg-color);
     color: var(--text-color);
 }
 
@@ -34,16 +35,16 @@ header{
     align-items: center;
     justify-content: space-between;
     padding: 30px 8%;
-    color: rgb(219, 219, 219);
-    text-shadow: 2px 2px rgb(12, 70, 12);
+    color: var(--text-color);
 }
 
 
 .logo{
+    font-family: 'Poppins', sans-serif;
     display: flex;
     align-items: center;
     color: var(--text-color);
-    font-size: 28px;
+    font-size: 30px;
     font-weight: bold;
      
 }
@@ -60,7 +61,7 @@ header{
 }
 
 .navegação a{
-    color: var(--text-color);
+    color:  var(--second-text-color);
     font-size: var(--p-font);
     font-weight: 500;
     margin: 0 30px;
@@ -74,6 +75,7 @@ header{
 .header-icons{
     display: flex;
     align-items: center;
+    color: var(--second-text-color);
 }
 
 #menu{
@@ -88,6 +90,8 @@ header{
     font-size: 28px;
     cursor: pointer;
     transition: all .5s ease;
+    color: var(--second-text-color);
+
 }
 
 .header-icons i:hover{
@@ -106,26 +110,34 @@ header{
 
 }
 
+
 .home-text h1{
     font-size: var(--h1-font);
+    font-size: 70px;
     line-height: 1.2;
     margin-bottom: 2px;
+    margin-top: 35%;
     margin-left: 25%;
+    color: var(--text-color);
+    text-shadow: 2px 2px var(--main-color);
 
 
 }
 
 .home-text h2{
     font-size: var(--h1-font);
+    font-size: 65px;
     line-height: 1.2;
     margin-bottom: 2px;
-    margin-left: 40%;
+    margin-left: 36%;
+    color: var(--text-color);
+    text-shadow: 2px 2px var(--main-color);
 
 
 }
 
 .home-text h5{
-    color: #4e9c61;
+    color: var(--main-color);
     font-size: 20px;
     font-weight: 500;
     margin-bottom: 30px; /*30; */
@@ -139,8 +151,9 @@ header{
     font-size: 15px;
     font-weight: 700;
     letter-spacing: 2px;
-    margin-bottom: 35px; /*35px;*/
+    margin-bottom: 35px; 
     margin-left: 40%;
+    color: var(--second-text-color);
 
 }
 
@@ -150,20 +163,21 @@ header{
     height: auto;
     margin-left: 50%;
     border-radius: 50%;
-    box-shadow: 4px 4px  rgb(131, 130, 130);
+    border: 3px solid var(--main-color);
+    /* box-shadow: 3px 3px  #4e9c61; */
     
 
 }
 
 .btn{
     display: inline-block;
-    padding: 15px 70px;
-    font-size: 14px;
+    padding: 10px 70px;
+    font-size: 16px;
     font-weight: 500;
     background: transparent;
-    border: solid 2px var(--text-color);
+    border: solid 2px #5a5959;
     transition: all 0.55s ease;
-    color: #fff;
+    color: var(--second-text-color);
     margin-left: 35%;
     
 
@@ -247,4 +261,101 @@ header{
 
 .row3:hover{
     transform: translateY(-8px);
+}
+
+#informacoes{
+    margin-top: 10%;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 38px;
+    color: var(--main-color);
+    height: auto;
+    max-width: 100%;
+    text-shadow: 2px 2px #fff;
+    
+}
+
+#conteudo{
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    align-items: center;
+    font-size: 26px;
+    color:var(--second-text-color);
+}
+
+#conteudo img{
+    width: 500px;
+    height: auto;
+}
+
+#img2 {
+    display: flex; 
+    align-items: center; 
+    margin-top: 20px;
+}
+
+#img2 img {
+    margin-left: 20%;
+    width: 250px; 
+    margin-right: 16px; 
+}
+
+#img2 p {
+    margin-right: 60px; 
+    font-family: 'Poppins', sans-serif;
+    font-size: 23px;
+    flex: 1; 
+}
+
+
+a{
+    color: var(--main-color);
+}
+
+.siga{
+    margin-top: 1px;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 50px;
+    color:var(--second-text-color);
+    height: auto;
+    max-width: 100%;
+}
+
+.texto {
+    text-align: center; 
+    font-size: 26px;
+    max-width: 76%; 
+    margin: 0 auto; 
+}
+
+#atencao{
+    color: red;
+    font-size: 60px;
+}
+
+#aviso{
+    font-family: 'Poppins', sans-serif;
+    text-align: center; 
+    font-size: 18px;
+    max-width: 70%;
+    margin: 0 auto; 
+}
+
+
+.btn2{
+    display: inline-block;
+    padding: 10px 70px;
+    font-size: 16px;
+    font-weight: 500;
+    background: transparent;
+    border: solid 2px #5a5959;
+    transition: all 0.55s ease;
+    color: var(--second-text-color);
+}
+
+.btn2:hover{
+    background: var(--text-color);
+    border: 2px solid var(--text-color);
+    color: #000;
 }
