--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,11 +12,7 @@
     <h1>ChargerHelp</h1>
     <br><br>
     <div class="login-form">
-         <form method="post" action="/">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" maxlength="20" required>
-                <br><br>
-
+         <form method="post" action="/fazerLoginCliente">
                 <label for="email">E-mail:</label>
                 <input type="email" id="email" name="email" maxlength="40" required >
                 <br><br>
