--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -40,13 +40,13 @@
     </section>
     <div class="main">
         <div class="row">
-            <li><img src="./MAIN1.jpg" onclick="slider('produto1.png')"></li>
+            <li><img src="./type-c.jpg" onclick="slider('produto1.png')"></li>
         </div>
         <div class="row2">
-            <li><img src="./main2.jpg" onclick="slider('produto2.png')"></li>
+            <li><img src="./lightning.jpg" onclick="slider('produto2.png')"></li>
         </div>
         <div class="row3">
-            <li><img src="./MAIN3.jpg" onclick="slider('produto3.png')"></li>
+            <li><img src="./micro-usb.jpg" onclick="slider('produto3.png')"></li>
         </div>
     </div>
     <script>
