atualização css cadastro parte 1

--- a/arquivos/styleCadastro.css
+++ b/arquivos/styleCadastro.css
@@ -1,10 +1,75 @@
-body {
-    background-color:   #adb9af;
-    align-items: center;
-    text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    list-style: none;
 
 }
 
+/* paleta de cores do site e o tamanho de fontes que sera usado */
+:root{
+    --bg-color:  #adb9af;
+    --text-color: #fff;
+    --second-text-color:  #3b3b3b;;
+    --main-color: rgb(17, 104, 17);;
+    --other-color: #7cff9d;
+    --h1-font: 4rem;
+    --p-font: 1rem;
+
+}
+
+body{
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
+
+header{
+    width: 100%;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px 8%;
+    color: var(--text-color);
+}
+
+
+.logo{
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    align-items: center;
+    color: var(--text-color);
+    font-size: 35px;
+    font-weight: bold;
+     
+}
+
+.logo i{
+    color: var(--main-color);
+    margin-right: 5px;
+    font-weight: bold;
+}
+
+.navegação{
+    display: flex;
+    margin-right: 100px;
+}
+
+.navegação a{
+    color:  var(--second-text-color);
+    font-size: var(--p-font);
+    font-size: 20px;
+    margin: 0 30px;
+    transition: a .55s ease;
+}
+
+.navegação a:hover{
+    color: var(--main-color)
+}
 
 
 
@@ -19,16 +84,13 @@ h1 {
 }
 
 p{
+    text-align: center;
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
     color: rgb(102, 99, 99);
 }
 
 
-@font-face {
-    font-family: "stone";
-    src: url('./fontes/stoNe.ttf') format ('truetype');
-}
 input{
     font-family: 'Poppins', sans-serif;
     background-color:   #adb9af;
@@ -38,15 +100,14 @@ input{
     width: 200x;
 }
 .cadastro-form {
-    width: 350px;
+    width: 650px;
+    height: 400px;
     margin: 0 auto;
     padding: 45px;
-    color:  rgb(102, 99, 99);
+    color: var(--text-color);
     font-size: 22px;
     font-family: 'Poppins', sans-serif;
-    background-color:  #adb9af;
-    box-shadow: 0px 4px 12px 0px  rgb(102, 99, 99), 0 6px 20px 0  rgb(102, 99, 99);
-    border-color: rgb(102, 99, 99);
+    background-color: rgb(157, 173, 157);
     border-width: 1px;
     border-style: solid;
 }
@@ -58,13 +119,14 @@ input::placeholder {
 
 
 button{
-    font-size: 25px;
+    width: 200px;
+    font-size: 20px;
     font-family: 'Poppins', sans-serif;
     margin-right: 4px;
     margin-left: 4px;
-    background-color:   #adb9af;
+    background-color:   grey;
     border-color: rgb(219, 219, 219);
-    color: rgb(102, 99, 99);
+    color: var(--text-color);
 }
 
 .link_login{
