--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -15,13 +15,14 @@
     <title>Área de Cadastro - ChargerHelp</title>
 </head>
 <body>
-    <header>
         <header>
-          
+            <a href="#" class="logo"> <i class='bx bx-plus-circle'></i>ChargerHelp</a>
+            <ul class="navegação">
+                <li><a href="login">Login</a></li>
+            </ul>
+        </header>
 
-        </header>   
-        <h1>ChargerHelp</h1>
-
+            
     <br><br>
     <main>
         <div class="cadastro-form">
